--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<!-- Bootstrap CSS --><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<!-- Animated CSS -->  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 		<!-- My CSS --><link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+		<!-- Sample font --> <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	
 		<title>Bootcampspot 2.0</title>
 	</head>
