--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Meta tag for bootstrap scaling --><meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Bootstrap CSS --><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-		<!-- Animated CSS -->  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-		<!-- My CSS --><link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-		<!-- Sample font --> <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-	
+		<!-- Meta tag for bootstrap scaling -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+		<!-- Animated CSS -->  
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+		<!-- My CSS -->
+	<!-- 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css"> -->
+		<!-- Sample font -->
+		 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
 		<title>Bootcampspot 2.0</title>
 	</head>
 
