--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<!-- Animated CSS -->  
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 		<!-- My CSS -->
-	<!-- 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css"> -->
+		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 		<!-- Sample font -->
 		 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
