--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<!-- Animated CSS -->  
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+		<!-- Webpack CSS -->
+		<link rel="stylesheet" type="text/css" href="/assets/css/webpackStyle.css">
 		<!-- My CSS -->
-		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/assets/css/globalStyle.css">
 		<!-- Sample font -->
 		 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
