--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<!-- Meta tag for bootstrap scaling -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Reset CSS -->
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 		<!-- Animated CSS -->  
