github login almost complete, tabs and pages now only load when user is logged in

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	</head>
 
 	<body>
-		<div id="app">
+		<div id="example">
 		
 		</div>
 
@@ -28,3 +28,10 @@
 	</body>
 
 </html>
+<!-- 
+<!doctype html public "display of affection">
+<title>Authentication Flow Example</title>
+<body>
+
+<div id="example"/>
+<script src="bundle.js"></script> -->
