reorganized per Peleg

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<!-- My CSS -->
 		<link rel="stylesheet" type="text/css" href="/assets/css/globalStyle.css">
 		<!-- Webpack CSS -->
-		<link rel="stylesheet" type="text/css" href="/assets/css/webpackStyle.css">
+		<link rel="stylesheet" type="text/css" href="/static/webpackStyle.css">
 		<!-- Sample font -->
 		 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
@@ -24,7 +24,7 @@
 		
 		</div>
 
-		<script src="bundle.js"></script>
+		<script src="/static/bundle.js"></script>
 	</body>
 
 </html>
